# starterpacks

./: stage.txt
c++/: .gitignore  CMakeLists.txt  cbr.sh  main.cxx  stage.txt
c++/autocompile/: build.sh  configure.sh  run.sh
